<resources>
    <string name="app_name">GmailApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_label">All labels</string>
    <string name="title_google">Google apps</string>

    <string name="menu_primary">Priamry</string>
    <string name="menu_Promotions">Promotions</string>
    <string name="menu_social">Social</string>
    <string name="menu_starred">Starred</string>
    <string name="menu_Snoozed">Snoozed</string>
    <string name="menu_Important">Important</string>
    <string name="menu_Sent">Sent</string>
    <string name="menu_Scheduled">Scheduled</string>
    <string name="menu_Outbox">Outbox</string>
    <string name="menu_Draft">Draft</string>
    <string name="menu_All_mail">All mail</string>
    <string name="menu_Spam">Spam</string>
    <string name="menu_Bin">Bin</string>
    <string name="menu_Calender">Calender</string>
    <string name="menu_Contact">Contact</string>
    <string name="menu_Settings">Settings</string>
    <string name="menu_help_and_feedback">Help and feedback</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inbox">All Inboxes</string>

</resources>