<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:androoid="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/primary"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_primary" />
        <item

            android:id="@+id/promotions"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_Promotions" />
        <item
            android:id="@+id/social"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_social" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/starred"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_starred" />
        <item

            android:id="@+id/snoozed"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_Snoozed" />
        <item
            android:id="@+id/important"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Important" />
       <item
        android:id="@+id/sent"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_Sent" />
        <item
        android:id="@+id/schdule"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_Scheduled" />
        <item
            android:id="@+id/outbox"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Outbox" />
        <item
            android:id="@+id/draft"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Draft" />
        <item
            android:id="@+id/all_mail"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_All_mail" />
        <item
            android:id="@+id/spam"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Spam" />
        <item
            android:id="@+id/bin"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Bin"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/calender"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_Calender" />
        <item

            android:id="@+id/contact"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_Contact" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_Settings"></item>
        <item

            android:id="@+id/help"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_help_and_feedback" />
    </group>
</menu>